# teamflow-ui/src/app/services/models/project.ts
@@ -2,12 +2,14 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { Task } from '../models/task';
 import { User } from '../models/user';
 export interface Project {
   createdAt?: string;
   description?: string;
   id?: number;
   owner?: User;
+  tasks?: Array<Task>;
   teamMembers?: Array<User>;
   title?: string;
   updatedAt?: string;
